Fix for stretched columns at smaller sizes

--- a/sass/_grid.scss
+++ b/sass/_grid.scss
@@ -5,25 +5,24 @@
 .wrapper {
 	overflow-y: scroll;
   -webkit-overflow-scrolling: touch;
-	margin: $unit-lg 0 $unit-lg $unit-md;
+	margin: $unit-lg;
   -webkit-transform: translateZ(0px);
   -webkit-transform: translate3d(0,0,0);
   -webkit-perspective: 1000;
-	@media only screen and (min-width: $bp-md) { 
-		margin: $unit-lg;
-	}
+	// @media only screen and (min-width: $bp-sm) { 
+	// 	margin: $unit-lg;
+	// }
 	@media only screen and (min-width: 1137px) { 
   	margin: $unit-xlg;
   }
 }
 .grid-container {
   display: grid;
-  grid-template-columns: repeat(3, 150px);
-  grid-template-rows: repeat(12);
+  grid-template-columns: repeat(2, 150px);
   border-top: 1px solid $cloud;
   border-left: 1px solid $cloud;
-  @media only screen and (min-width: $bp-md) { 
-  	grid-template-rows: 1fr repeat(5, 80px);
+  @media only screen and (min-width: $bp-sm) { 
+  	grid-template-rows: 1fr repeat(4, 80px);
   	grid-template-columns: 150px repeat(3, 1fr);
   	justify-items: stretch;
   }
@@ -39,13 +38,13 @@
 	display: flex;
 	padding-top: $unit-sm;
 	padding-bottom: $unit-sm;
-	@media only screen and (min-width: $bp-md) { 
+	@media only screen and (min-width: $bp-sm) { 
 		padding-top: 0;
 		padding-bottom: 0;
 	}
 }
 .grid-label {
-  	@media only screen and (max-width: $bp-md) { 
+  	@media only screen and (max-width: $bp-sm) { 
   		grid-column-start: 1;
   		grid-column-end: span col6-start;
   		background-color: $cloud;
